--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,21 +60,21 @@
       </div>
     </nav>
 
-    <header class="jumbotron">
+    <!-- <header class="jumbotron">
       <div class="container">
         <h1>地球にときめく</h1>
         <p>このサイトは旅好きの人々が隠れスポットを紹介しあい、<br>
         新しい出会いや新しい発見を生み出すサイトです。</p>
       </div>
     </header>
-
+ -->
     
     <div class="container">
       
-          <div class="col-md-1 col-xs-0 "></div>
-          <div class="col-md-10 col-xs-12 "><%= yield %></div>
-          <div class="col-md-1 col-xs-0 "></div>
-      
+<!--           <div class="col-md-1 col-xs-0 "></div>
+ -->         <%= yield %>
+<!--           <div class="col-md-1 col-xs-0 "></div>
+ -->      
     </div>
 
   
