--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,17 @@
-<h1>投稿の編集</h1>
+<h1 class="top">投稿の編集</h1>
 
-<%= render'form' %>
+<div class="container">
+ 	<div class="col-md-1 col-xs-0"></div>
+  	<div class="col-md-10 col-xs-12">
+
+
+		
+
+		<%= render'form' %>
+
+	</div>
+
+	<div class="col-md-1 col-xs-0"></div>
+
+</div>
 
