--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,16 +66,18 @@
         <p>このサイトは旅好きの人々が隠れスポットを紹介しあい、<br>
         新しい出会いや新しい発見を生み出すサイトです。</p>
       </div>
-    </header>
- -->
+    </header> -->
+
     
-    <div class="container">
+    <!-- <div class="container">
       
-<!--           <div class="col-md-1 col-xs-0 "></div>
- -->         <%= yield %>
-<!--           <div class="col-md-1 col-xs-0 "></div>
- -->      
-    </div>
+          <div class="col-md-1 col-xs-0 "></div>
+          <div class="col-md-10 col-xs-12 "> -->
+          <%= yield %>
+          <!-- </div>
+          <div class="col-md-1 col-xs-0 "></div>
+      
+    </div> -->
 
   
 
