--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="container">
+ 	<div class="col-md-1 col-xs-0"></div>
+  	<div class="col-md-10 col-xs-12">
+		<p>Hello <%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+		<p>We're contacting you to notify you that your password has been changed.</p>
+	</div>
+
+	<div class="col-md-1 col-xs-0"></div>
+</div>
