--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,17 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="container top">
+ 	<div class="col-md-1 col-xs-0"></div>
+  	<div class="col-md-10 col-xs-12">
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+		<p>Hello <%= @resource.email %>!</p>
 
-<p>Click the link below to unlock your account:</p>
+		<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+		<p>Click the link below to unlock your account:</p>
+
+		<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+
+	</div>
+
+	<div class="col-md-1 col-xs-0"></div>
+
+</div>
