--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,34 @@
-<h2>新しいパスワード</h2>
+<h2 class="top">新しいパスワード</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+<div class="container">
+  <div class="col-md-1 col-xs-0"></div>
+  <div class="col-md-10 col-xs-12">
 
-  <div class="form-group">
-    <%= f.label :新しいパスワード, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <%= f.hidden_field :reset_password_token %>
+
+      <div class="form-group">
+        <%= f.label :新しいパスワード, "New password" %><br />
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :もう一度パスワードを入力してください, "Confirm new password" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
+
+      <div class="actions, form-group">
+        <%= f.submit "新しいパスワード" class: "btn btn-success"%>
+      </div>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+
+    <%= render "devise/shared/links" %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :もう一度パスワードを入力してください, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  <div class="col-md-1 col-xs-0"></div>
 
-  <div class="actions, form-group">
-    <%= f.submit "新しいパスワード" class: "btn btn-success"%>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
