--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,25 @@
-<h2>パスワードを忘れてしまった場合</h2>
+<h2 class="top">パスワードを忘れてしまった場合</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+<div class="container">
+ 	<div class="col-md-1 col-xs-0"></div>
+  	<div class="col-md-10 col-xs-12">
+		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+		  <%= devise_error_messages! %>
 
-  <div class="actions, form-group">
-    <%= f.submit "新しいパスワードを送信", class: "btn btn-success" %>
-  </div>
-<% end %>
+		  <div class="form-group">
+		    <%= f.label :メールアドレス %><br />
+		    <%= f.email_field :email, autofocus: true %>
+		  </div>
 
-<%= render "devise/shared/links" %>
+		  <div class="actions, form-group">
+		    <%= f.submit "新しいパスワードを送信", class: "btn btn-success" %>
+		  </div>
+		<% end %>
+
+		<%= render "devise/shared/links" %>
+	</div>
+
+	<div class="col-md-1 col-xs-0"></div>
+</div>
+
