--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>新規登録</h2>
+<h2 class="top">新規登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="container">
+  <div class="col-md-1 col-xs-0"></div>
+  <div class="col-md-10 col-xs-12">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+
+      <div class="form-group">
+        <%= f.label :メールアドレス %><br />
+        <%= f.email_field :email, autofocus: true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :パスワードお願いします %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> 文字以上必要です)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "off" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :確認のためもう一度パスワードをお願いします %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
+
+      <div class="actions, form-group">
+        <%= f.submit "新規登録", class: "btn btn-success" %>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :パスワードお願いします %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以上必要です)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :確認のためもう一度パスワードをお願いします %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions, form-group">
-    <%= f.submit "新規登録", class: "btn btn-success" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <div class="col-md-1 col-xs-0"></div>
+</div>
