--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,3 +1,9 @@
-
+<header class="jumbotron">
+  <div class="container">
+    <h1>地球にときめく</h1>
+    <p>このサイトは旅好きの人々が隠れスポットを紹介しあい、<br>
+    新しい出会いや新しい発見を生み出すサイトです。</p>
+  </div>
+</header>
 
 
