--- a/app/views/likes/likes.html.erb
+++ b/app/views/likes/likes.html.erb
@@ -1,30 +1,41 @@
-<ul>
-    <li>
-      <%= link_to user_path(@user) do %>
-        <div class="text">投稿数</div>
-        <div class="num"><%= @user.articles.count %></div>
-      <% end %>
-    </li>
-    <li>
-      <%= link_to likes_user_path(@user) do %>
-        <div class="text">いいね一覧</div>
-        <div class="num"><%= @user.likes.count %></div>
-      <% end %>     
-    </li>
-</ul> 
-<% if @user.likes.empty? %>
-    <div class="list-group-item">
-      まだいいねされた投稿はありません。
-    </div>
-<% end %>
-<% @user.likes.map { |f| f.article }.each do |article| %>
-    <h4 class="user">
-        <span class="user-email">
-          <%= link_to article.user.email, user_path(article.user) %>
-        </span>
-    <span class="user-id"><%= article.user.email %></span>
-    </h4>
-    <div class="post-body">
-        <%= article.body %>
-    </div>  
-<% end %>
+<div class="container">
+  <div class="col-md-1 col-xs-0"></div>
+  <div class="col-md-10 col-xs-12">
+
+    <ul>
+        <li>
+          <%= link_to user_path(@user) do %>
+            <div class="text">投稿数</div>
+            <div class="num"><%= @user.articles.count %></div>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to likes_user_path(@user) do %>
+            <div class="text">いいね一覧</div>
+            <div class="num"><%= @user.likes.count %></div>
+          <% end %>     
+        </li>
+    </ul> 
+    <% if @user.likes.empty? %>
+        <div class="list-group-item">
+          まだいいねされた投稿はありません。
+        </div>
+    <% end %>
+    <% @user.likes.map { |f| f.article }.each do |article| %>
+        <h4 class="user">
+            <span class="user-email">
+              <%= link_to article.user.email, user_path(article.user) %>
+            </span>
+        <span class="user-id"><%= article.user.email %></span>
+        </h4>
+        <div class="post-body">
+            <%= article.body %>
+        </div>  
+    <% end %>
+
+
+  </div>
+
+  <div class="col-md-1 col-xs-0"></div>
+
+</div>
