--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,29 +1,34 @@
-<h1>プロフィールの編集</h1>
+<h1 class="top">プロフィールの編集</h1>
 
+<div class="container">
+ 	<div class="col-md-1 col-xs-0"></div>
+  	<div class="col-md-10 col-xs-12">
+		<%= form_for @user do |f| %>
+			<div class="form-group">
+				名前
+				<%= f.text_field :name, class: "form-control" %>
+			</div>
 
-<%= form_for @user do |f| %>
-	<div class="form-group">
-		名前
-		<%= f.text_field :name, class: "form-control" %>
+			<div class="form-group">
+				出身地
+				<%= f.text_field :birthplace, class: "form-control" %>
+			</div>
+
+			<div class="form-group">
+				性別
+				<%= f.text_field :sex, class: "form-control" %>
+			</div>
+
+			<div class="form-group">
+				年齢
+				<%= f.text_field :age, class: "form-control" %>
+			</div>
+
+			<div class="form-group">
+				<%= f.submit "保存", class: "btn btn-success" %>
+			</div>
+
+		<% end %>
 	</div>
-
-	<div class="form-group">
-		出身地
-		<%= f.text_field :birthplace, class: "form-control" %>
-	</div>
-
-	<div class="form-group">
-		性別
-		<%= f.text_field :sex, class: "form-control" %>
-	</div>
-
-	<div class="form-group">
-		年齢
-		<%= f.text_field :age, class: "form-control" %>
-	</div>
-
-	<div class="form-group">
-		<%= f.submit "保存", class: "btn btn-success" %>
-	</div>
-
-<% end %>
+	<div class="col-md-1 col-xs-0"></div>
+</div>
