--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
+<h1 class="top">ユーザー一覧</h1>
+
 <div class="container">
  	<div class="col-md-1 col-xs-0"></div>
   	<div class="col-md-10 col-xs-12">
 
-		<h1>ユーザー一覧</h1>
+		
 		<div class="row">
 			<% @users.each do |user| %>
 				<div class="col-md-4">
