--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,7 @@
 <header class="jumbotron">
   <div class="container">
-    <h1>地球にときめく</h1>
-    <p>このサイトは旅好きの人々が隠れスポットを紹介しあい、<br>
+    <h3 class="main-title">地球にときめく</h3>
+    <p class="sab-title">このサイトは旅好きの人々が隠れスポットを紹介しあい、<br>
     新しい出会いや新しい発見を生み出すサイトです。</p>
   </div>
 </header>
