--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,14 @@
-<h1>About Travelon</h1>
+<h1 class="top">About Travelon</h1>
 
+<div class="container">
+	<div class="col-md-1 col-xs-0"></div>
+	<div class="col-md-10 col-xs-12">
 
+		<h3>お問い合わせ</h3>
+		<p>Infratop  渋谷区円山町20-1 新大宗円山ビル11F</p>
 
-<h3>お問い合わせ</h3>
-<p>Infratop  渋谷区円山町20-1 新大宗円山ビル11F</p>
+		<h3>Member</h3>
+	</div>
 
-<h3>Member</h3>
+	<div class="col-md-1 col-xs-0"></div>
+</div>
