--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
 
 
 
-    <h2>投稿一覧<%= @user.articles.count %></h2>
+    <h2>投稿一覧(<%= @user.articles.count %>)</h2>
           <!-- <div class="text">投稿数<%= @user.articles.count %></div> -->
           <!-- <div class="num"><%= @user.articles.count %></div> -->
 
