--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -77,9 +77,9 @@
 
 					<!-- フォローボタン -->
 					<% if article.user.followed_by? current_user %>
-		              <%= link_to "フォロー解除", user_relationship_path(article.user), method: :delete %>
+		              <%= link_to "フォロー解除", user_relationship_path(article.user), method: :delete, class: "glyphicon glyphicon-thumbs-up" %>
 		            <% else %>
-		              <%= link_to "フォロー", user_relationship_path(article.user), method: :post %>
+		              <%= link_to "フォロー", user_relationship_path(article.user), method: :post, class: "glyphicon glyphicon-thumbs-down" %>
 		            <% end %>
 					
 				</div>
