--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,11 +4,20 @@
 	<div class="col-md-1 col-xs-0"></div>
 	<div class="col-md-10 col-xs-12">
 
+
 		<h3>お問い合わせ</h3>
 		<p>Infratop  渋谷区円山町20-1 新大宗円山ビル11F</p>
 
 		<h3>Member</h3>
 	</div>
+
+	<%= image_tag '/test1.jpg', class: "parallax-window" %>
+	<%= image_tag '/test2.jpg', class: "parallax-window" %>
+	<%= image_tag '/test3.jpg', class: "parallax-window" %>
+	<%= image_tag '/test1.jpg', class: "parallax-window" %>
+	<%= image_tag '/test2.jpg', class: "parallax-window" %>
+	<%= image_tag '/test3.jpg', class: "parallax-window" %>
+
 
 	<div class="col-md-1 col-xs-0"></div>
 </div>
