--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,9 +81,7 @@
 
   
 
-
-
-
-    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="../javascripts/parallax.js"></script>  
   </body>
 </html>
