add gem bootstrap

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -16,15 +16,31 @@
 }*/
 
 h1{
+	padding-top: 60px;
 	text-align: center;
 }
 
 h2{
+	padding-top: 60px;
 	text-align: center;
 }
 
 h3{
+	padding-top: 60px;
 	text-align: center;
+}
+
+p{
+	padding-top: 30px;
+	text-align: center;
+}
+
+
+/*aboutページのpタグ*/
+.about{
+	padding-top: 30px;
+	text-align: center;
+	border-bottom: dotted 3px #b0c4de;
 }
 
 /*画像の大きさ指定*/
