--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,20 +4,40 @@
 	<div class="col-md-1 col-xs-0"></div>
 	<div class="col-md-10 col-xs-12">
 
+		<h3>Travelon</h3>
+		<p class="about">
+			オススメの隠れスポットを紹介しましょう！
+		</p>
 
 		<h3>お問い合わせ</h3>
-		<p>Infratop  渋谷区円山町20-1 新大宗円山ビル11F</p>
+		<p class="about">Infratop  渋谷区円山町20-1 新大宗円山ビル11F</p>
+		<p><a href="https://twitter.com/infratop" target="_blank">WALSのつぶやき</a></p>
+		<%= image_tag '/websuku.png' %>
 
 		<h3>Member</h3>
+		<div class="col-md-4">
+		<%= image_tag '/websuku.png', class: "parallax-window" %>
+		<article>
+			webスク20期生　増田
+		</article>
+		</div>
+
+		<div class="col-md-4">
+		<%= image_tag '/websuku.png', class: "parallax-window" %>
+		<article>
+			webスク20期生　大野
+		</article>
+		</div>
+
+		<div class="col-md-4">
+		<%= image_tag '/websuku.png', class: "parallax-window" %>
+		 <article>
+		 	webスク20期生　渡邉
+		 </article>
+		</div>
+
 	</div>
-
-	<%= image_tag '/test1.jpg', class: "parallax-window" %>
-	<%= image_tag '/test2.jpg', class: "parallax-window" %>
-	<%= image_tag '/test3.jpg', class: "parallax-window" %>
-	<%= image_tag '/test1.jpg', class: "parallax-window" %>
-	<%= image_tag '/test2.jpg', class: "parallax-window" %>
-	<%= image_tag '/test3.jpg', class: "parallax-window" %>
-
+	</div>
 
 	<div class="col-md-1 col-xs-0"></div>
 </div>
