--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
 
 
 header.jumbotron {
@@ -62,7 +64,7 @@ header .container {
 }
 
 .title {
-	color: #00FF00;
+	color: #337ab7;
 	padding-top: 20px;
 }
 
@@ -73,4 +75,15 @@ header .container {
 .posting {
 	padding-top: 30px;
 	text-align: center;
+}
+
+
+
+
+/*＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝フッター＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝*/
+.footer-container{
+	width: 100%;
+	height: 50px;
+	margin-top: 80px;
+	background-color: #87cefa;
 }
