--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,9 +79,13 @@
       
     </div> -->
 
-  
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="../javascripts/parallax.js"></script>  
+    <footer class="footer-container">
+      <!-- <span class="label label-default">Default</span>
+      <span class="label label-default">Default</span>
+      <span class="label label-default">Default</span>
+      <span class="label label-default">Default</span> -->
+      <p>©︎websuku20 Travelon</p>
+    </footer>
+   
   </body>
 </html>
