--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,6 +34,11 @@
         </div>
     </div>
 
+    <% if current_user.id == @user.id %>
+      <%= link_to "編集", edit_user_path(current_user.id) %>
+      <%= link_to "削除", user_path(current_user), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+    <% end %>
+
 
 
     <h3>
@@ -76,26 +81,21 @@
 
 
 
-
-    <li>
+    <div class="following">
       <%= link_to follows_user_path(@user) do %>
-        <div class="text">フォロー</div>
-        <div class="num"><%= @user.followings.count %></div>
+        <div class="text">フォロー<%= @user.followings.count %></div>
+        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
       <% end %>
-    </li>
-    <li>
+    </div>
+
+    <div class="follower">
       <%= link_to followers_user_path(@user) do %>
-        <div class="text">フォロワー</div>
-        <div class="num"><%= @user.followers.count %></div>
+        <div class="text">フォロワー<%= @user.followers.count %></div>
+        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
       <% end %>
-    </li>
+    </div>
 
 
-
-    <% if current_user.id == @user.id %>
-      <%= link_to "編集", edit_user_path(current_user.id) %>
-      <%= link_to "削除", user_path(current_user), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-    <% end %></p>
   </div>
 
   <div class="col-md-1 col-xs-0"></div>
