--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,19 +73,16 @@
       
           <div class="col-md-1 col-xs-0 "></div>
           <div class="col-md-10 col-xs-12 "> -->
+          <div class="clearfix">
           <%= yield %>
+          </div>
           <!-- </div>
           <div class="col-md-1 col-xs-0 "></div>
       
     </div> -->
 
     <footer class="footer-container">
-      <!-- <span class="label label-default">Default</span>
-      <span class="label label-default">Default</span>
-      <span class="label label-default">Default</span>
-      <span class="label label-default">Default</span> -->
-      <p>©︎websuku20 Travelon</p>
+      <p class="about">©︎websuku20 Travelon</p>
     </footer>
-   
   </body>
 </html>
