--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -83,6 +83,8 @@
 				</div>
 			</div>
 
+			 <h5 class="article-hobby"><%= @article.user.name %></h5>
+
 
 			<tr>
 		       <td>
@@ -105,6 +107,15 @@
 			    <%= link_to @article.likes.count, article_path(@article.id), id: 'like-count' %> 人がいいね！しました
 			  </small>
 			</div>
+
+
+
+			<!-- フォローボタン -->
+			<% if @article.user.followed_by? current_user %>
+              <%= link_to "フォロー中", user_relationship_path(@article.user), method: :delete, class: "glyphicon glyphicon-user" %>
+            <% else %>
+              <%= link_to "フォローする", user_relationship_path(@article.user), method: :post, class: "glyphicon glyphicon-thumbs-up" %>
+            <% end %>
 
 		</div>
 
