--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -12,7 +12,9 @@
 		<h3>お問い合わせ</h3>
 		<p class="about">Infratop  渋谷区円山町20-1 新大宗円山ビル11F</p>
 		<p><a href="https://twitter.com/infratop" target="_blank">WALSのつぶやき</a></p>
-		<%= image_tag '/wals.jpg' %>
+		<p><a href="http://infratop.jp/" target="_blank">Infratop</a></p>
+		<%= image_tag '/wals1.png' %>
+
 
 		<h3>Member</h3>
 		<div class="col-md-4">
