--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,8 +5,10 @@
 	<div class="col-md-10 col-xs-12">
 
 		<h3>Travelon</h3>
+		
 		<p class="about">
-			オススメの隠れスポットを紹介しましょう！
+			<strong>What's Travelon?</strong>
+			"TRAVEL×ALONE"旅が好きな人。オススメの隠れスポットを紹介しましょう！
 		</p>
 
 		<h3>お問い合わせ</h3>
