--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,10 +5,11 @@
 	<div class="col-md-10 col-xs-12">
 
 		<h3>Travelon</h3>
-		
+
 		<p class="about">
 			<strong>What's Travelon?</strong>
 			"TRAVEL×ALONE"旅が好きな人。オススメの隠れスポットを紹介しましょう！
+			各地の旅行のログを共有しよう！
 		</p>
 
 		<h3>お問い合わせ</h3>
