--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "application", 'https://fonts.googleapis.com/css?family=Sigmar+One', :media => "all" %>
   </head>
- 
+
   <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
