--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="top">プロフィールの編集</h1>
+<h1 class="top">Edit my profile</h1>
 
 <div class="container">
  	<div class="col-md-1 col-xs-0"></div>
