--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,4 +1,4 @@
-<h1 class="top">いいねした項目</h1>
+<h1 class="top">Favorite spots</h1>
 <div class="container">
   <div class="col-md-1 col-xs-0"></div>
   <div class="col-md-10 col-xs-12">
@@ -9,8 +9,6 @@
             <!-- <div class="num"><%= @user.likes.count %></div> -->
         </p>
 
-          
-          
     </ul>
 
     <% if @user.likes.empty? %>
