--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -15,18 +15,15 @@
 	clear: both;
 }*/
 
-h1{
-	padding-top: 60px;
-	text-align: center;
-}
 
-h2{
+h1,h2{
 	padding-top: 60px;
 	text-align: center;
+	/*font-family: 'Sigmar One', cursive;*/
+	font-family: 'Russo One', sans-serif;
 }
 
 h3{
-	padding-top: 60px;
 	text-align: center;
 }
 
@@ -36,6 +33,16 @@ p{
 }
 
 
+/*indexページ*/
+.article-content{
+	max-height: 500px;
+	border:dotted 3px gray;
+}
+
+.article-title{
+	padding: 0;
+}
+
 /*aboutページのpタグ*/
 .about{
 	padding-top: 30px;
@@ -43,10 +50,20 @@ p{
 	border-bottom: dotted 3px #b0c4de;
 }
 
+
+.article-hobby{
+	display: inline-block;
+}
+
 /*画像の大きさ指定*/
 .article-image img{
 	width: 270px;
 	height: 200px;
+	padding: 0;
+}
+
+.article-image{
+	padding: 0;
 }
 
 .article-image-show {
@@ -59,6 +76,9 @@ p{
 }
 
 /*どやの幅指定*/
+.article-doya {
+	display: inline-block;
+}
 
 
 /*どや*/
@@ -81,3 +101,8 @@ p{
 }
 
 
+/*シェアボタン*/
+.social-share-button{
+	display: inline-block;
+	float: right;
+}
