--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,38 +1,37 @@
 <%= form_for @article do |f| %>
 
 	<div class="form-group">
-	タイトル
+	<%= f.label :title, "タイトル" %>
 	<%= f.text_field :title, class: "article, article-title, form-control" %>
 	</div>
-	
+
 	<div class="form-group">
-	内容
+	<%= f.label :content, "内容" %>
 	<%= f.text_area :content, class: "article, article-content, form-control" %>
 	</div>
 
 	<div class="form-group">
-	場所
+	<%= f.label :area, "場所" %>
 	<%= f.text_area :area, class: "article, article-area, form-control" %>
 	</div>
 
 	<div class="form-group">
-	画像
+	<%= f.label :img, "画像" %>
 	<%= f.file_field :img, class: "article" %>
 	</div>
 
 	<div class="form-group">
-	どや度
+	<%= f.label :doya, "どや度" %>
 	<%= f.collection_select :doya, Star.all, :id, :id %>
 	</div>
 
 	<div class="form-group">
-	<%= f.label :user_id %><br>
-	ユーザーID
+	<%= f.label :user_id, "ユーザーID" %><br>
 	<%= f.collection_select :user_id, User.all, :id, :id %>
 	</div>
 
 	<div class="form-group">
-	趣味
+	<%= f.label :hobby, "趣味" %>
 	<%= f.collection_select :hobby, Hobby.all, :body, :body %>
 	</div>
 
