--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,11 +1,9 @@
-<h1 class="top">投稿の編集</h1>
+<h1 class="top">Edit your spot</h1>
 
 <div class="container">
  	<div class="col-md-1 col-xs-0"></div>
   	<div class="col-md-10 col-xs-12">
 
-
-		
 
 		<%= render'form' %>
 
