--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="top">隠れスポットを紹介しよう</h1>
+<h1 class="top">Submit my recommend spots!</h1>
 
 <div class="container">
  	<div class="col-md-1 col-xs-0"></div>
@@ -14,9 +14,9 @@
 		      </ul>
 		    </div>
 		  <% end %>
-	</div>
+		  <%= render'form' %>
 
-	<%= render'form' %>
+	</div>
 
 	<div class="col-md-1 col-xs-0"></div>
 </div>
