--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,39 +16,39 @@
 
 
 					<!-- どや -->
-					<div class="article-doya">
+					<div class="doya-all">
 							<% if article.doya == 1 %>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>☆</p></div>
-								<div class="star" ><p>☆</p></div>
-								<div class="star" ><p>☆</p></div>
-								<div class="star" ><p>☆</p></div>
+								<div class="star" >★</div>
+								<div class="star" >☆</div>
+								<div class="star" >☆</div>
+								<div class="star" >☆</div>
+								<div class="star" >☆</div>
 							<% elsif article.doya == 2 %>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>☆</p></div>
-								<div class="star" ><p>☆</p></div>
-								<div class="star" ><p>☆</p></div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >☆</div>
+								<div class="star" >☆</div>
+								<div class="star" >☆</div>
 							<% elsif article.doya == 3 %>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>☆</p></div>
-								<div class="star" ><p>☆</p></div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >☆</div>
+								<div class="star" >☆</div>
 							<% elsif article.doya == 4 %>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>☆</p></div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >☆</div>
 							<% elsif article.doya == 5 %>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
-								<div class="star" ><p>★</p></div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
+								<div class="star" >★</div>
 							<% else article.doya %>
-								<p>NOどや</p>
+								<div class="star">NOどや</div>
 							<% end %>
 					</div>
 
