--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
-<h1 class="top">My account</h1>
+<h1 class="top">Find my friends</h1>
 
 <div class="container">
  	<div class="col-md-1 col-xs-0"></div>
   	<div class="col-md-10 col-xs-12">
 
-		
 		<div class="row">
 			<% @users.each do |user| %>
 				<div class="col-md-4">
