--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -1,43 +1,49 @@
 <h3>Follow</h3>
 
-<ul>
-    <li>
-      <%= link_to user_path(@user) do %>
-        <div class="text">投稿数</div>
-        <div class="num"><%= @user.articles.count %></div>
-      <% end %>
-    </li>
-    <li>
-      <%= link_to follows_user_path(@user) do %>
-        <div class="text">フォロー</div>
-        <div class="num"><%= @user.followings.count %></div>
-      <% end %>
-    </li>
-    <li>
-      <%= link_to followers_user_path(@user) do %>
-        <div class="text">フォロワー</div>
-        <div class="num"><%= @user.followers.count %></div>
-      <% end %>
-    </li>
-    <li>
-      <%= link_to likes_user_path(@user) do %>
-        <div class="text">いいね一覧</div>
-        <div class="num"><%= @user.likes.count %></div>
-      <% end %>     
-    </li>
-</ul>
+<div class="container">
+  <div class="col-md-1 col-xs-0"></div>
+  <div class="col-md-10 col-xs-12">
 
-<% @user.followings.each do |u| %>
-    <div>
-        <%= link_to u.name, user_path(u.id) %>
-        <span>@<%= u.name %></span>
-    </div>
+        <tr>
+            <td>
+              <%= link_to user_path(@user) do %>
+                <div class="text">投稿数</div>
+                <div class="num"><%= @user.articles.count %></div>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to follows_user_path(@user) do %>
+                <div class="text">フォロー</div>
+                <div class="num"><%= @user.followings.count %></div>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to followers_user_path(@user) do %>
+                <div class="text">フォロワー</div>
+                <div class="num"><%= @user.followers.count %></div>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to likes_user_path(@user) do %>
+                <div class="text">いいね一覧</div>
+                <div class="num"><%= @user.likes.count %></div>
+              <% end %>
+            </td>
+        </ul>
 
-    <div class="follow-unfollow">
-        <% if u.followed_by? current_user %>
-          <%= link_to "フォロー解除", user_relationships_path(u), method: :delete %>
-        <% else %>
-          <%= link_to "フォロー", user_relationships_path(u), method: :post %>
+        <% @user.followings.each do |u| %>
+            <div>
+                <%= link_to u.name, user_path(u.id) %>
+                <span>@<%= u.name %></span>
+            </div>
+
+            <div class="follow-unfollow">
+                <% if u.followed_by? current_user %>
+                  <%= link_to "フォロー解除", user_relationship_path(u), method: :delete %>
+                <% else %>
+                  <%= link_to "フォロー", user_relationship_path(u), method: :post %>
+                <% end %>
+            </div>
         <% end %>
-    </div>
-<% end %>
+  </div>
+</div>
