--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -28,6 +28,7 @@
 	<div class="form-group">
 	<%= f.label :user_id, "ユーザーID" %><br>
 	<%= f.collection_select :user_id, User.all, :id, :id %>
+	<%#= f.hidden_field :user_id, value: @user.id %>
 	</div>
 
 	<div class="form-group">
