--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,3 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+.member-img{
+	margin-top: 50px;
+	width: 150px;
+	height: 150px;
+	background-size: cover;
+	border-radius: 50%;
+}
