add article img

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -21,21 +21,24 @@
 		<div class="col-md-4">
 		<%= image_tag '/cat.jpg', class: "member-img" %>
 		<article>
-			webスク20期生　増田
+			webスク20期生　増田<br>
+			プログラマー
 		</article>
 		</div>
 
 		<div class="col-md-4">
 		<%= image_tag '/dog.jpg', class: "member-img" %>
 		<article>
-			webスク20期生　大野
+			webスク20期生　大野<br>
+			プログラマー
 		</article>
 		</div>
 
 		<div class="col-md-4">
 		<%= image_tag '/dug.jpg', class: "member-img" %>
 		 <article>
-		 	webスク20期生　渡邉
+		 	webスク20期生　渡邉<br>
+		 	プログラマー
 		 </article>
 		</div>
 	</div>
