--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -23,7 +23,7 @@
       <%= link_to likes_user_path(@user) do %>
         <div class="text">いいね一覧</div>
         <div class="num"><%= @user.likes.count %></div>
-      <% end %>     
+      <% end %>
     </li>
 </ul>
 
@@ -35,9 +35,9 @@
 
     <div class="follow-unfollow">
         <% if u.followed_by? current_user %>
-          <%= link_to "フォロー解除", user_relationships_path(u), method: :delete %>
+          <%= link_to "フォロー解除", user_relationship_path(u), method: :delete %>
         <% else %>
-          <%= link_to "フォロー", user_relationships_path(u), method: :post %>
+          <%= link_to "フォロー", user_relationship_path(u), method: :post %>
         <% end %>
     </div>
 <% end %>
